--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <link rel="preload" href="https://public-assets.envato-static.com/ubuntu-22/assets/generated_sprites/common-5af54247f3a645893af51456ee4c483f6530608e9c15ca4a8ac5a6e994d9a340.png" as="image">
 
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Cyfonii | NFT Portfolio React NextJs Template Preview - ThemeForest</title>
-    <meta name="description" content="&lt;h2&gt;&lt;strong&gt;Cyfonii - NFT Portfolio React NextJs Template
+    <title>Pictoshot inc. NFT Broker Portfolio</title>
+    <meta name="description" content="&lt;h2&gt;&lt;strong&gt;Pictoshot inc. NFT Broker Portfolio
 &lt;/strong&gt;&lt;/h2&gt;...">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
@@ -45,7 +45,7 @@
     
   </head>
   <body class="full-screen-preview">
-    <iframe class="full-screen-preview__frame" src="https://cyfonii-next.vercel.app/" name="preview-frame" frameborder="0" noresize="noresize" data-view="fullScreenPreview" allow="geolocation 'self'; autoplay 'self'">
+    <iframe class="full-screen-preview__frame" src="https://pictoshot.io/" name="preview-frame" frameborder="0" noresize="noresize" data-view="fullScreenPreview" allow="geolocation 'self'; autoplay 'self'">
     </iframe>
   </body>
   
